--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </header>
     <section class="home-hero">
       <div class="home-hero__content">
-        <h1 class="heading-primary"> <I>Bonjour</I> !, I'm Ella</h1>
+        <h1 class="heading-primary"> <I>Bonjour</I> ! I'm Ella</h1>
         <div class="home-hero__info">
           <p class="text-primary">
            Welcome to my work !
@@ -135,9 +135,8 @@
               <p class="about__content-details-para">
                 <I>Bonjour!</I> I am 
                 <strong>Ella</strong>
-                and I'm a <strong> Geomatician with a Geographic and Urbanism background </strong> located in
-                Paris. One of my life goal is <strong>undestrand how human beings organized their territory to live together.</strong> 
-                To achieve this goal, I decided to work with geographic and spatial data by collecting, cleaning, analysing and sharing them. 
+                and I'm a <strong> Geomatician with a Geographic and Urbanistic background </strong>. One of my life goal is <strong>undestrand how human beings organized their territory to live together.</strong> 
+                To achieve this goal, I decided to work with geographic and spatial data from data gathering to presentation and everything in between (cleaning, organizing and processing).
                 This portfolio is my attempt to store all the tools I can used to reach my aim. 
               </p>
               <p class="about__content-details-para">
@@ -167,7 +166,7 @@
         <h2 class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Projects</span>
           <span class="heading-sec__sub">
-            A little bit of this, A little bit of that. Here I'll show you some projects I did when I decided to keep learning after University. 
+            A little bit of this, A little bit of that. Here I'll show you some projects I did for fun. 
           </span>
         </h2>
 
@@ -175,24 +174,23 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
+                src="./assets/jpeg/pic_html_presentation.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 1</h3>
+              <h3 class="projects__row-content-title">HTML/CSS</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                When I decided to create my Portfolio I thought this can be an opportunity to exercise my HTML and CSS. 
+                Thanks to the Github community, I was able to create a website and recollecting HTML and CSS concepts as class, anchor and link. 
               </p>
               <a
                 href="./project-1.html"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >Case Study</a
+                >More about the code</a
               >
             </div>
           </div>
