--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             >
           </div>
           <div class="about__content-skills">
-            <h3 class="about__content-title">Some skills you will find here/h3>
+            <h3 class="about__content-title">Some skills you will find here</h3>
             <div class="skills">
               <div class="skills__skill">HTML</div>
               <div class="skills__skill">CSS</div>
