--- a/project-1.html
+++ b/project-1.html
@@ -22,7 +22,7 @@
         <div class="header__logo-container">
           <div class="header__logo-img-cont">
             <img
-              src="./assets/png/john-doe.png"
+              src="./assets/png/ID_Linkedin.png"
               alt="Ram Maheshwari Logo Image"
               class="header__logo-img"
             />
@@ -87,7 +87,7 @@
         <h1 class="heading-primary">HTML/CSS</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            Work smarter not harder. When you have to start a code, your first instincts should be to check if it already exists. 
+            Work smarter not harder. When you have to start a code, your first instinct should be to check if it already exists. 
             Thanks to github, you'll will find some pieces for sure. 
           </p>
         </div>
@@ -101,7 +101,7 @@
         <div class="project-details__content">
           <div class="project-details__showcase-img-cont">
             <img
-              src="./assets/jpeg/project-mockup-example.jpeg"
+              src="./assets/png/pic_html_presentation"
               alt="Project Image"
               class="project-details__showcase-img"
             />
