--- a/project-1.html
+++ b/project-1.html
@@ -101,7 +101,7 @@
         <div class="project-details__content">
           <div class="project-details__showcase-img-cont">
             <img
-              src="./assets/png/pic_html_presentation"
+              src="./assets/png/pic_html_presentation.png"
               alt="Project Image"
               class="project-details__showcase-img"
             />
